--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@
 \include{05-Application/source}
 \include{Conclusion}
 %Bibliography files
-\bibliography{01-Modularite/biblio_modularite.bib,01-Modularite/biblio_reseaux.bib, 03-Representation/biblio_representation.bib}
+\bibliography{01-Modularite/biblio_modularite.bib,01-Modularite/biblio_reseaux.bib, 03-Representation/biblio_representation.bib,02-SOM/biblio_SOM.bib}
 
 \bibliographystyle{plain}
 \end{document}
